# nux-server

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose-tests.yml  docker-compose.yml  main.py  nux_local.conf  pyproject.toml  tox.ini
.github/workflows/: build_and_publish.yml  lint_and_test.yml
ansible/: ansible.cfg  decode_id_rsa.sh  id_rsa  id_rsa.gpg  id_rsa.pub  inventory.ini  known_hosts  playbook.yml
nux/: __init__.py  __main__.py  app.py  auth.py  config.py  confirmation.py  database.py  default_profile_pics.py  events.py  firebase.py  notifications.py  pydantic_types.py  s3.py  schemes.py  sms.py
nux/alembic/: env.py
nux/alembic/versions/: 0b43488d8aa4_confirmations.py  2960950b8fb4_friends.py  3c67d400d75b_statuses_big_update.py  4707aa768df3_not_null_statuses_user_id.py  589883f9f4d0_confirmations.py  5c486b435974_remove_apps_android_category.py  61a5e09f0174_remove_indexes.py  61c1fad8f21a_approved_apps.py  68bb1892f945_init.py  75374367cdb3_user_in_app_records.py  8439ef1ee4b3_new_apps.py  8a6092571469_offline.py  a88ad21d28bd_do_not_disturbe.py  ada1332b86e7_remove_icons.py  f116fd5e93cc_default_profile_pic.py  f6c58a860367_fix_acivity.py  fccc925ee9a4_rename_disturb.py
nux/icons_updater/: __init__.py  _icons_updater.py
nux/models/: app.py  friends.py  status.py  user.py
nux/periodic_tasks/: __init__.py  _clear_statuses.py
nux/resources/: apps_resources.py  auth.py  chats_resources.py  friends_resources.py  statistic_resources.py  status_resources.py  users_resources.py  utils.py
scripts/: run_db_tasks.sh  run_dev.sh  run_icons_updater.sh  run_prod.sh  start_dev.sh
tests/: conftest.py  test_app.py  test_auth.py  test_confirmation.py  test_default_profile_pics.py  test_icons_updater.py  test_notifications.py  test_periodic_tasks.py  utils.py
tests/models/: test_app.py
tests/resources/: test_apps_resources.py  test_friends_resources.py  test_status_resouces.py  test_users_resources.py
