[tool.poetry]
name = "nux"
version = "0.1.0"
description = ""
authors = ["i3cheese <i3cheese@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
ConfigArgParse = "^1.5.3"
SQLAlchemy = "^1.4.37"
uvicorn = "^0.17.6"
psycopg2 = "^2.9.3"
pydantic = "^1.9.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"
alembic = "^1.8.0"
passlib = "^1.7.4"
bcrypt = "^3.2.2"
yarl = "^1.7.2"
firebase-admin = "^5.2.0"
boto3 = "^1.24.32"
ischedule = "^1.2.5"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
SQLAlchemy-Utils = "^0.38.2"
requests = "^2.28.0"
Faker = "^13.14.0"
pycodestyle = "^2.8.0"
flake8 = "^4.0.1"
freezegun = "^1.2.1"

[tool.poetry.scripts]
run = "nux:run_app"
run_db_tasks = "nux:run_db_tasks"
create_all = "nux:create_all"
make_migration = "nux:make_migration"
run_migrations = "nux:run_migrations"
alembic = "nux:alembic"
print_shit = "nux:print_shit"
delete_user = "nux:delete_user"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
